--- a/atlas.example.yaml
+++ b/atlas.example.yaml
@@ -10,6 +10,9 @@ services:
     tasks:
       - clean
       - build
+    package:
+      parameters: "-Drpm.version=1"
+      subdir: "package/"
     test: false
   -
     docker:
