--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,2 +1,20 @@
-# Config Translation Error
-# Could not find stored inference data.  Please run a build and try again.
+version: 2
+defaults: &defaults
+  working_directory: /go/src/github.com/ahstn/atlas
+  docker:
+    - image: circleci/golang:1.10.3
+
+jobs:
+  build:
+    <<: *defaults
+    steps:
+      - checkout
+      - run:
+          name: fetch vgo
+          command: go get -u golang.org/x/vgo
+      - run:
+          name: build atlas
+          command: vgo build cmd/atlas/atlas.go
+      - run:
+          name: test atlas
+          command: vgo test -coverpkg=all ./...
