#21: Adding CodeCov integration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,12 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      # - run:
-      #     name: fetch vgo
-      #     command: go get -u golang.org/x/vgo
       - run:
           name: build atlas
           command: vgo build cmd/atlas/atlas.go
       - run:
           name: test atlas
-          command: vgo test -coverpkg=all ./...
+          command: |
+            vgo test -coverprofile=coverage.txt -covermode=atomic ./...
+            bash <(curl -s https://codecov.io/bash)
+
