--- a/examples/java/atlas.yaml
+++ b/examples/java/atlas.yaml
@@ -4,7 +4,7 @@ services:
   -
     docker:
       dockerfile: ./Dockerfile
-      enabled: false
+      enabled: true
     name: product-api
     repo: https://github.com/ahstn/atlas.git
     tasks:
@@ -13,7 +13,7 @@ services:
   -
     docker:
       dockerfile: ./Dockerfile
-      enabled: false
+      enabled: true
     name: users-api
     repo: https://github.com/ahstn/atlas.git
     tasks:
