--- a/examples/java/users-api/Dockerfile
+++ b/examples/java/users-api/Dockerfile
@@ -1,9 +1,11 @@
 # Maven Builder Image
 FROM maven:3.5-jdk-8 as builder
-COPY src /usr/src/app/src
-COPY pom.xml /usr/src/app
 ENV MAVEN_OPTS -XX:+TieredCompilation -Xmx768m
-RUN mvn -f /usr/src/app/pom.xml -T 1C clean package
+WORKDIR /usr/src/app
+COPY pom.xml /usr/src/app
+RUN mvn -B -C -T 1C org.apache.maven.plugins:maven-dependency-plugin:3.0.2:go-offline
+COPY src /usr/src/app/src
+RUN mvn -B -o -T 1C verify
 
 FROM openjdk:jre-alpine as target
 COPY --from=builder /usr/src/app/target/app.jar /app.jar
