#24: Fixing CircleCI and refactoring Docker runs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,7 @@
 version: 2
 defaults: &defaults
-  working_directory: /go/src/github.com/ahstn/atlas
   docker:
-    - image: ahstn/go-circleci:1.10.3
+    - image: circleci/golang:1.11
 
 jobs:
   build:
@@ -10,11 +9,13 @@ jobs:
     steps:
       - checkout
       - run:
+          name: fetch deps
+          command: go mod download
+      - run:
           name: build atlas
-          command: vgo build cmd/atlas/atlas.go
+          command: go build cmd/atlas/atlas.go
       - run:
           name: test atlas
           command: |
-            vgo test -coverprofile=coverage.txt -covermode=atomic ./...
+            go test -coverprofile=coverage.txt -covermode=atomic ./...
             bash <(curl -s https://codecov.io/bash)
-
